# runixeer

./: Cargo.toml  README.md
builtins/desktopentries/: Cargo.toml
builtins/desktopentries/src/: main.rs
builtins/emojis/: Cargo.toml
builtins/librunixeer/: Cargo.toml
builtins/librunixeer/src/: lib.rs
builtins/runnables/: Cargo.toml
src/: args.rs  config.rs  main.rs  pinned.rs  plugin.rs  pm.rs
