[package]
name = "runixeer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
librunixeer = { path = "builtins/librunixeer", version = "0.1.0" }
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"] }

[workspace]
members = [
  "builtins/desktopentries",
  "builtins/runnables",
  "builtins/emojis",
  "builtins/librunixeer",
]

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }

[workspace.package]
version = "0.1.0"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
incremental = true
